...
	"introDescriptionNavigate": "Navigate the intersection of time, art, and culture.",
	"introTitleExplore": "Explore places",
	"introDescriptionUncover": "Uncover remarkable human-made structures from around the world.",
	"introTitleDiscover": "Discover artifacts",
	"introDescriptionLearn": "Learn about cultures throughout time by examining things they left behind.",
	"introSemanticNavigate": "Navigate",
	"introSemanticSwipeLeft": "Swipe left to continue",
	"introSemanticEnterApp": "Enter the app",
	"introSemanticWonderous": "Wonderous",
	"labelledToggleSemanticToggle": "toggle",
	"photoGallerySemanticCollectible": "collectible!",
	"photoGallerySemanticFocus": "Photo {photoIndex} of {photoTotal}. Tap to focus.",
	"@photoGallerySemanticFocus": {"placeholders": {"photoIndex": {}, "photoTotal": {}}},
...
	"chichenItza600ce": "Chichen Itza rises to regional prominence toward the end of the Early Classic period",
	"chichenItza832ce": "The earliest hieroglyphic date discovered at Chichen Itza",
	"chichenItza998ce": "Last known date recorded in the Osario temple",
	"chichenItza1100ce": "Chichen Itza declines as a regional center",
	"chichenItza1527ce": "Invaded by Spanish Conquistador Francisco de Montejo",
	"chichenItza1535ce": "All Spanish are driven from the Yucatán Peninsula",
	"chichenItzaCollectible1Title": "Pendant",
	"chichenItzaCollectible1Icon": "jewelry",
	"chichenItzaCollectible2Title": "Bird Ornament",
	"chichenItzaCollectible2Icon": "jewelry",
	"chichenItzaCollectible3Title": "La Prison, à Chichen-Itza",
	"chichenItzaCollectible3Icon": "picture",
	"christRedeemerTitle": "Christ the Redeemer",
...
