...
                        mainAxisSize: MainAxisSize.min,
                        children: [
                          /// Tabs
                          _TabBtn(
                            0,
                            tabController,
                            iconImg: 'editorial',
                            label: $strings.wonderDetailsTabLabelInformation,
                            color: iconColor,
                            axis: axis,
                            mainAxisSize: tabBtnSize,
                            onTap: onTap,
                          ),
...
